--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <img src="/image/senin.png" class="card-img-top" alt="senin">
             <div class="card-body">
               <h5 class="card-title">Senin</h5>
-              <p class="card-text">Belum ada tugas</p>
+              <p class="card-text">Membuat laporan jarkom modul 1</p>
               <div class="atas">
                 <button onclick="openPopup()" class="game-button">lihat</button>
               </div>
@@ -113,7 +113,7 @@
           <img class="container-xxl" src="/image/Jsenin.png" alt="jsenin">
           <hr>
           <h4 class="catat">Catatan</h4>
-          <p class="isi">belum ada tugas</p>
+          <p class="isi">Membuat laporan jarkom modul 1</p>
         </div>
         </div>
         <div class="popup-overlay2" id="popupOverlay2" style="display: none;">
