--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <img src="/image/senin.png" class="card-img-top" alt="senin">
             <div class="card-body">
               <h5 class="card-title">Senin</h5>
-              <p class="card-text">Membuat laporan jarkom modul 1</p>
+              <p class="card-text">Membuat laporan jarkom modul 2</p>
               <div class="atas">
                 <button onclick="openPopup()" class="game-button">lihat</button>
               </div>
@@ -48,7 +48,7 @@
             <img src="/image/selasa.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title2">Selasa</h5>
-              <p class="card-text2">Belum ada tugas</p>
+              <p class="card-text2">Tugas laporan Web Minggu ke 3</p>
               <div class="atas2">
                 <button onclick="openPopup2()" class="game-button2">lihat</button>
               </div>
@@ -60,7 +60,7 @@
             <img src="/image/rabu.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title3">Rabu</h5>
-              <p class="card-text3">Belum ada tugas</p>
+              <p class="card-text3">Praktikum Web Modul 3</p>
               <div class="atas3">
                 <button onclick="openPopup3()" class="game-button3">lihat</button>
               </div>
@@ -72,7 +72,7 @@
             <img src="/image/kamis.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title4">Kamis</h5>
-              <p class="card-text4">Membuat laporan praktikum modul 1 ASD</p>
+              <p class="card-text4">Membuat laporan praktikum modul 2 ASD</p>
               <div class="atas4">
                 <button onclick="openPopup4()" class="game-button4">lihat</button>
               </div>
@@ -96,7 +96,7 @@
               <img src="/image/sabtu.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title6">Sabtu</h5>
-                <p class="card-text6">Zoom meet jam 1 dan setelah ashar</p>
+                <p class="card-text6">Belum ada kegiatan</p>
                 <div class="atas6">
                   <button onclick="openPopup6()" class="game-button6">lihat</button>
                 </div>
@@ -113,7 +113,7 @@
           <img class="container-xxl" src="/image/Jsenin.png" alt="jsenin">
           <hr>
           <h4 class="catat">Catatan</h4>
-          <p class="isi">Membuat laporan jarkom modul 1</p>
+          <p class="isi">Membuat laporan jarkom modul 2</p>
         </div>
         </div>
         <div class="popup-overlay2" id="popupOverlay2" style="display: none;">
@@ -124,7 +124,7 @@
             <img class="container-xxl" src="/image/Jselasa.png" alt="jselasa">
             <hr>
             <h4 class="catat2">Catatan</h4>
-            <p class="isi2">belum ada tugas</p>
+            <p class="isi2">Tugas laporan Web Minggu ke 3</p>
             
           </div>
       </div>
@@ -136,7 +136,7 @@
           <img class="container-xxl" src="/image/Jrabu.png" alt="jRabu">
           <hr>
           <h4 class="catat3">Catatan</h4>
-          <p class="isi3">belum ada tugas</p>
+          <p class="isi3">Praktikum Web Modul 3</p>
         </div>
         </div>
         <div class="popup-overlay4" id="popupOverlay4" style="display: none;">
@@ -147,7 +147,7 @@
             <img class="container-xxl" src="/image/Jkamis.png" alt="jkamis">
             <hr>
             <h4 class="catat4">Catatan</h4>
-            <p class="isi4">Membuat laporan praktikum modul 1 ASD</p>
+            <p class="isi4">Membuat laporan praktikum modul 2 ASD</p>
           </div>
           </div>
           <div class="popup-overlay5" id="popupOverlay5" style="display: none;">
@@ -169,7 +169,7 @@
                 <img class="container-xxl" src="/image/Jsabtu.png" alt="jsabtu">
                 <hr>
                 <h4 class="catat6">Catatan</h4>
-                <p class="isi6">Zoom meet jam 1 dan setelah ashar</p>
+                <p class="isi6">Belum ada kegiatan</p>
               </div>
               </div>
 </section> 
